k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nintendo-vibes
  labels:
    app: nintendo-vibes
spec:
  selector:
    app: nintendo-vibes
  ports:
    - name: http
      port: 8080
      targetPort: http
